Migrate to sbt 1.0.0 #38 (#39)
Migrate to sbt 1.0.0 #38