@@ -1,14 +1,16 @@
 lazy val `sbt-flaky` =
   (project in file("."))
-    .enablePlugins(GitVersioning, GitBranchPrompt)
+    .enablePlugins(GitVersioning, GitBranchPrompt, ScriptedPlugin)
     .settings(
       libraryDependencies ++= Seq(
         "org.apache.commons" % "commons-vfs2" % "2.1",
         "com.lihaoyi" %% "scalatags" % "0.6.5",
-        "com.typesafe.sbt" % "sbt-git" % "0.9.2",
+        "com.typesafe.sbt" % "sbt-git" % "0.9.3",
+        "org.scala-sbt" %% "scripted-plugin" % sbtVersion.value,
         "org.scalatest" %% "scalatest" % "3.0.1" % "test"
       ),
-      addSbtPlugin("com.typesafe.sbt" % "sbt-git" % "0.9.2")
+      addSbtPlugin("com.typesafe.sbt" % "sbt-git" % "0.9.3"),
+      sbtPlugin := true
     )
 
 git.useGitDescribe := true
@@ -17,22 +19,10 @@ organization := "pl.otrebski"
 
 name := "sbt-flaky"
 
-version := "0.12"
+version := "0.13"
 
-//scalaVersion := "2.11.8"
+scalaVersion := "2.12.3"
 
-sbtPlugin := true
-
-javaVersionPrefix in javaVersionCheck := Some("1.8") //Should I compile with specific version?
-
-ScriptedPlugin.scriptedSettings
-
-scriptedLaunchOpts := {
-  scriptedLaunchOpts.value ++
-    Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
-}
-
-scriptedBufferLog := false
 
 publishMavenStyle := false
 
